Data models are added

--- a/HandmadeCity/appsettings.json
+++ b/HandmadeCity/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-HandmadeCity-537AEA06-BF7A-4AC9-8754-286170ABBCF4;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=tcp:juliaovsienko.database.windows.net,1433;Initial Catalog=HandmadeCity;Persist Security Info=False;User ID=juliaovsienko;Password=!23Qweasd;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Logging": {
     "IncludeScopes": false,
